implement the burger menu

--- a/index.html
+++ b/index.html
@@ -8,6 +8,26 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
+    <div class="box">
+      <button class="button" aria-expanded="false" aria-controls="list">menu</button>
+      <ul class="menu" id="list" aria-hidden="true">
+        <li class="menu__item">
+          <a class="menu__link" href="#1" tabindex="-1">link</a>
+        </li>
+        <li class="menu__item">
+          <a class="menu__link" href="#2" tabindex="-1">link</a>
+        </li>
+        <li class="menu__item">
+          <a class="menu__link" href="#3" tabindex="-1">link</a>
+        </li>
+        <li class="menu__item">
+          <a class="menu__link" href="#4" tabindex="-1">link</a>
+        </li>
+        <li class="menu__item">
+          <a class="menu__link" href="#5" tabindex="-1">link</a>
+        </li>
+      </ul>
+    </div>
     <script src="js/main.js"></script>
   </body>
 </html>
